--- a/css/style.css
+++ b/css/style.css
@@ -397,6 +397,7 @@ h6 {
   margin: 20px 0;
   color: #353738;
   font-size: 1.125rem;
+  line-height: 2.125rem;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.225rem;
@@ -486,6 +487,7 @@ h6 {
 .box-info__title {
   color: #353738;
   font-size: 1.125rem;
+  line-height: 1.525rem;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.225rem;
@@ -495,7 +497,7 @@ h6 {
 
 .box-info__text {
   color: #848789;
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: 400;
   line-height: 1.875rem;
 }
