--- a/css/style.css
+++ b/css/style.css
@@ -496,20 +496,33 @@ h6 {
 }
 
 .box-info__text {
+  position: relative;
   color: #848789;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.875rem;
 }
 
+.box-info__text:after {
+  position: absolute;
+  left: 50%;
+  bottom: -15px;
+  width: 51px;
+  margin-left: -25px;
+  height: 1px;
+  content: "";
+  background-color: #D4DBDF;
+}
+
 .box-info::after {
   position: absolute;
-  content: "";
-  background-color: white;
-  width: 14px;
-  height: 14px;
   bottom: -7px;
   left: 50%;
+  width: 14px;
+  margin-left: -7px;
+  height: 14px;
+  content: "";
+  background-color: white;
   -webkit-transform: rotate(45deg);
       -ms-transform: rotate(45deg);
           transform: rotate(45deg);
@@ -940,6 +953,10 @@ h6 {
     margin: 1.9375rem 0 1.1875rem;
   }
 
+  .box-info__text:after {
+    bottom: -28px;
+  }
+
   .shop__col-2 {
     -ms-flex-preferred-size: 33.33333%;
         flex-basis: 33.33333%;
@@ -1119,6 +1136,10 @@ h6 {
 
   .box-info {
     padding: 4.375rem 4.1875rem 5.5rem;
+  }
+
+  .box-info__text:after {
+    bottom: -40px;
   }
 }
 
