--- a/css/style.css
+++ b/css/style.css
@@ -441,20 +441,12 @@ h6 {
 .box-logo {
   width: 100%;
   height: 300px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: block;
 }
 
 .box-logo__owerlay {
-  height: 100%;
   width: 100%;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -532,8 +524,6 @@ h6 {
 
 .box-bg {
   display: none;
-  padding-top: 32.6%;
-  width: 100%;
 }
 
 .shop__row {
@@ -559,6 +549,7 @@ h6 {
 
 .plate {
   height: 100%;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -578,7 +569,6 @@ h6 {
 }
 
 .plate__col {
-  height: 100%;
   -webkit-box-flex: 0;
       -ms-flex: 0 1 50%;
           flex: 0 1 50%;
@@ -1121,6 +1111,8 @@ h6 {
 
   .box-bg {
     display: block;
+    padding-top: 32.6%;
+    width: 100%;
   }
 
   .shop__row {
